@@ -1,5 +1,7 @@
 = master
 
+* Deprecate Stream#callback in the streaming plugin (jeremyevans)
+
 * Deprecate the automatic support for EventMachine in the streaming plugin (jeremyevans)
 
 * Deprecate static_path_info plugin, which has been a no-op in Roda 2 (jeremyevans)
